data/manifests/artifacthub/istio-official/istiod/017_mutatingwebhookconfiguration_istio-sidecar-injector-default.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector-default
  labels:
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: Pilot
    app: sidecar-injector
    release: release-name
    app.kubernetes.io/name: istiod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.27.1
    helm.sh/chart: istiod-1.27.1
webhooks:
- name: rev.namespace.sidecar-injector.istio.io
  clientConfig:
    service:
      name: istiod
      namespace: default
      path: /inject
      port: 443
  sideEffects: None
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods
  failurePolicy: Fail
  reinvocationPolicy: Never
  admissionReviewVersions:
  - v1
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - default
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - 'false'
- name: rev.object.sidecar-injector.istio.io
  clientConfig:
    service:
      name: istiod
      namespace: default
      path: /inject
      port: 443
  sideEffects: None
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods
  failurePolicy: Fail
  reinvocationPolicy: Never
  admissionReviewVersions:
  - v1
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: DoesNotExist
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - 'false'
    - key: istio.io/rev
      operator: In
      values:
      - default
- name: namespace.sidecar-injector.istio.io
  clientConfig:
    service:
      name: istiod
      namespace: default
      path: /inject
      port: 443
  sideEffects: None
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods
  failurePolicy: Fail
  reinvocationPolicy: Never
  admissionReviewVersions:
  - v1
  namespaceSelector:
    matchExpressions:
    - key: istio-injection
      operator: In
      values:
      - enabled
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - 'false'
- name: object.sidecar-injector.istio.io
  clientConfig:
    service:
      name: istiod
      namespace: default
      path: /inject
      port: 443
  sideEffects: None
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods
  failurePolicy: Fail
  reinvocationPolicy: Never
  admissionReviewVersions:
  - v1
  namespaceSelector:
    matchExpressions:
    - key: istio-injection
      operator: DoesNotExist
    - key: istio.io/rev
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: In
      values:
      - 'true'
    - key: istio.io/rev
      operator: DoesNotExist
